--- a/morn-testweb/pom.xml
+++ b/morn-testweb/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>org.morn</groupId>
+		<groupId>org.mornframework</groupId>
 		<artifactId>morn-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -31,7 +31,7 @@
 		
         
 		<dependency>
-			<groupId>org.morn</groupId>
+			<groupId>org.mornframework</groupId>
 			<artifactId>morn-webmvc</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
