--- a/morn-webmvc/pom.xml
+++ b/morn-webmvc/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>org.morn</groupId>
+		<groupId>org.mornframework</groupId>
 		<artifactId>morn-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
