--- a/morn-testweb/src/main/resources/application.properties
+++ b/morn-testweb/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 app.name=testweb
 app.url=http://localhost:8080/testweb
 author=Jeff.Li
+
+timeOut=100
+userName=Administrator
+
+
+oracle.driver=oracle.jdbc.OracleDriver
+oracle.url=jdbc:oracle:thin:@10.1.195.151:1521:exprd1
+oracle.username=ytexp
+oracle.password=ytexp
