--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	<modules>
 		<module>morn-webmvc</module>
     	<module>morn-testweb</module>
-    <module>morn-core</module>
-    <module>morn-beans</module>
-    <module>morn-context</module>
+	    <module>morn-core</module>
+	    <module>morn-beans</module>
+	    <module>morn-context</module>
   </modules>
   	
   	<properties>
@@ -45,6 +45,30 @@
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${commons-lang}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.3</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-pool</groupId>
+				<artifactId>commons-pool</artifactId>
+				<version>1.5.5</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.oracle</groupId>
+				<artifactId>ojdbc14</artifactId>
+				<version>10.2.0.4.0</version>
 			</dependency>
 		
 		</dependencies>
