--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>org.mornframework</groupId>
 	<artifactId>morn-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<modules>
 		<module>morn-webmvc</module>
-    	<module>morn-testweb</module>
-	    <module>morn-core</module>
-	    <module>morn-beans</module>
-	    <module>morn-context</module>
-  </modules>
-  	
-  	<properties>
-  		<commons-lang>2.4</commons-lang>
-  	</properties>
-	
+		<module>morn-testweb</module>
+		<module>morn-core</module>
+		<module>morn-beans</module>
+		<module>morn-context</module>
+	</modules>
+
+	<properties>
+		<commons-lang>2.4</commons-lang>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -27,51 +28,51 @@
 				<version>3.8.1</version>
 				<scope>test</scope>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>1.5.8</version>
 			</dependency>
-			
-	        <dependency>
+
+			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.5.8</version>
 			</dependency>
-			
+
 			<!-- commons -->
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${commons-lang}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.3</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
 				<version>1.5.5</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
 				<version>1.1.1</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.oracle</groupId>
 				<artifactId>ojdbc14</artifactId>
 				<version>10.2.0.4.0</version>
 			</dependency>
-		
+
 		</dependencies>
 	</dependencyManagement>
-	
+
 </project>
