--- a/morn-testweb/src/main/resources/application.properties
+++ b/morn-testweb/src/main/resources/application.properties
@@ -10,3 +10,7 @@ oracle.driver=oracle.jdbc.OracleDriver
 oracle.url=jdbc:oracle:thin:@10.1.195.151:1521:exprd1
 oracle.username=ytexp
 oracle.password=ytexp
+
+local.oracle.url=jdbc:oracle:thin:@localhost:1521/orcl
+local.oracle.username=system
+local.oracle.password=system
