--- a/morn-testweb/pom.xml
+++ b/morn-testweb/pom.xml
@@ -47,6 +47,7 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
 		</dependency>
 		
         <dependency>
