--- a/morn-testweb/src/main/resources/system.properties
+++ b/morn-testweb/src/main/resources/system.properties
@@ -14,3 +14,8 @@ oracle.password=ytexp
 local.oracle.url=jdbc:oracle:thin:@localhost:1521/orcl
 local.oracle.username=system
 local.oracle.password=system
+
+mysql.driver=com.mysql.jdbc.Driver
+mysql.url=jdbc:mysql://192.168.8.58:3307/smdm
+mysql.username=YTEXP
+mysql.password=123456
